# team_page_helper_app

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CODEOWNERS  cronjob_update.yml
team_page/: __init__.py  __main__.py  config.yml  main.py  models.py  process.py  utils.py
